# AGH_Distributed_Systems

./: README.md
ChatApp/src/Client/: Client.java  ClientApp.java  DatagramReader.java  Reader.java  Writer.java
ChatApp/src/Server/: ClientData.java  ClientHandler.java  DatagramServer.java  Message.java  MessageHandler.java  MessageQueue.java  Server.java  ServerApp.java
DynamicInvocationIce/: config.client  config.server  pom.xml
DynamicInvocationIce/src/main/python/: DynamicExample_ice.py  HelperTypes_ice.py  server.py
DynamicInvocationIce/src/main/slice/: DynamicExample.ice  HelperTypes.ice
MountainTripsApp/: pom.xml
OfficeApp/: config.client  config.server  pom.xml
OfficeApp/src/main/python/: Notification_ice.py  Office_ice.py  client.py
OfficeApp/src/main/slice/: Notification.ice  Office.ice
ReverseProxygRPC/: pom.xml
ReverseProxygRPC/nginx-1.21.0/conf/: nginx.conf
ReverseProxygRPC/src/main/proto/: letterformatting.proto  randomstreaming.proto
SatelliteMonitoringSystem/: pom.xml
SatelliteMonitoringSystem/src/main/resources/: application.conf
ZookeeperAppLauncher/: pom.xml
ZookeeperAppLauncher/src/: launch_servers.bat
currency_service/: CMakeLists.txt
currency_service/src/: App.cpp  AppComponents.hpp
currency_service/src/client/: CurrencyClient.hpp
currency_service/src/controller/: CurrencyService.cpp  CurrencyService.hpp  StructTmExtension.hpp
currency_service/src/dto/: CurrencyData.hpp
currency_service/websites/: error.html  error_begin.html  error_end.html  result.html  result_begin.html  root.html
(+74 files in other folders)
